# versions-lib

./: .dir-locals.el  .gitignore  CMakeLists.txt  LICENSE.md  README.md  genopenbsd.pl  test.cxx
include/versions-lib/: versions-ct-openbsd.hxx  versions-ct.hxx  versions.hxx
